--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cross-fetch": "^2.2.3",
+    "masonry-layout": "^4.2.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-masonry-layout": "^0.4.0",
     "react-scripts": "2.1.1"
   },
   "scripts": {
